testing/macro-tests/tests/ui/relation_primitive_mismatch.stderr
error: rel fields must explicitly declare prim = "..."; implicit identity types are forbidden
  --> tests/ui/relation_primitive_mismatch.rs:33:53
   |
33 |         field(ident = "target_id", value(item(rel = "Target")))
   |                                                     ^^^^^^^^
